package nl.han.dea.marijn.database.models;

import com.sun.jmx.snmp.EnumRowStatus;
import org.javalite.activejdbc.LazyList;
import org.javalite.activejdbc.Model;
import org.javalite.activejdbc.annotations.Table;

import java.sql.Array;

@Table("sharedsubscriptions")
public class SharedSubscription extends Model{

}
