@startuml

title __MODELS's Class Diagram__\n

  package nl.han.dea.marijn.database.models {
    class ActiveSubscription {
        {static} + makeNewStandardActiveSubscription()
        {static} + getActiveSubscriptions()
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class SharedSubscription {
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class Subscription {
        {static} + searchSubscription()
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class User {
        + calculateTotalAmount()
    }
  }
  

  ActiveSubscription -up-|> Model
  SharedSubscription -up-|> Model
  Subscription -up-|> Model
  User -up-|> Model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
